--- a/polkadot/node/service/Cargo.toml
+++ b/polkadot/node/service/Cargo.toml
@@ -85,6 +85,7 @@ parking_lot = { workspace = true, default-features = true }
 serde = { features = ["derive"], workspace = true, default-features = true }
 serde_json = { workspace = true, default-features = true }
 thiserror = { workspace = true }
+tempfile = { workspace = true }
 
 # Polkadot
 polkadot-core-primitives = { workspace = true, default-features = true }
