--- a/substrate/frame/multi-asset-bounties/Cargo.toml
+++ b/substrate/frame/multi-asset-bounties/Cargo.toml
@@ -53,6 +53,7 @@ runtime-benchmarks = [
 	"frame-system/runtime-benchmarks",
 	"pallet-balances/runtime-benchmarks",
 	"pallet-preimage/runtime-benchmarks",
+	"pallet-utility/runtime-benchmarks",
 	"sp-runtime/runtime-benchmarks",
 ]
 try-runtime = [
@@ -60,5 +61,6 @@ try-runtime = [
 	"frame-system/try-runtime",
 	"pallet-balances/try-runtime",
 	"pallet-preimage/try-runtime",
+	"pallet-utility/try-runtime",
 	"sp-runtime/try-runtime",
 ]
