--- a/substrate/frame/revive/uapi/Cargo.toml
+++ b/substrate/frame/revive/uapi/Cargo.toml
@@ -16,13 +16,16 @@ features = ["unstable-hostfn"]
 targets = ["riscv64imac-unknown-none-elf"]
 
 [dependencies]
+alloy-core = { workspace = true, features = ["sol-types"], optional = true }
 bitflags = { workspace = true }
-codec = { features = ["derive", "max-encoded-len"], optional = true, workspace = true }
+codec = { features = [
+  "derive",
+  "max-encoded-len",
+], optional = true, workspace = true }
 const-crypto = { version = "0.3.0", default-features = false }
 hex-literal = { version = "0.4.1", default-features = false }
 pallet-revive-proc-macro = { workspace = true }
 scale-info = { features = ["derive"], optional = true, workspace = true }
-alloy-core = { workspace = true, features = ["sol-types"], optional = true }
 
 [target.'cfg(target_arch = "riscv64")'.dependencies]
 polkavm-derive = { version = "0.27.0" }
