--- a/Plan.toml
+++ b/Plan.toml
@@ -1652,9 +1652,9 @@ reason = "changed"
 [[crate]]
 # substrate/frame/staking-async
 name = "pallet-staking-async"
-from = "0.3.0"
-to = "0.4.0"
-bump = "major"
+from = "0.4.0"
+to = "0.4.1"
+bump = "patch"
 reason = "changed"
 
 [[crate]]
