--- a/substrate/frame/revive/uapi/Cargo.toml
+++ b/substrate/frame/revive/uapi/Cargo.toml
@@ -16,7 +16,7 @@ features = ["unstable-hostfn"]
 targets = ["riscv64imac-unknown-none-elf"]
 
 [dependencies]
-alloy-core = { workspace = true, features = ["sol-types"], optional = true }
+alloy-core = { workspace = true, optional = true, features = ["sol-types"] }
 bitflags = { workspace = true }
 codec = { features = [ "derive", "max-encoded-len" ], optional = true, workspace = true }
 const-crypto = { version = "0.3.0", default-features = false }
