--- a/.github/workflows/release-reusable-publish-packages.yml
+++ b/.github/workflows/release-reusable-publish-packages.yml
@@ -83,6 +83,16 @@ jobs:
       - name: Checkout sources
         uses: actions/checkout@d632683dd7b4114ad314bca15554477dd762a938 # v4.2.0
 
+      - name: List available RPMs in S3 for debugging
+        env:
+          # You may need to provide credentials depending on bucket policy
+          AWS_ACCESS_KEY_ID: ${{ secrets.aws_release_access_key_id }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.aws_release_secret_access_key }}
+        run: |
+          S3_PATH="s3://releases-package-repos/polkadot/${{ env.VERSION }}"
+          echo "Listing .rpm files in ${S3_PATH}..."
+          aws s3 ls "${S3_PATH}" --recursive | grep ".rpm" || echo "No RPM files found in ${S3_PATH}"
+
       - name: Fetch rc artifacts or release artifacts from s3 based on version
         id: fetch_artifacts_from_s3
         run: |
