--- a/.github/workflows/release-reusable-publish-packages.yml
+++ b/.github/workflows/release-reusable-publish-packages.yml
@@ -74,10 +74,12 @@ jobs:
   fetch-artifacts-from-s3:
     runs-on: ubuntu-latest
     needs: [validate-inputs]
-    secrets: inherit
     env:
       REPO: ${{ github.repository }}
       VERSION: ${{ needs.validate-inputs.outputs.release_tag }}
+      AWS_ACCESS_KEY_ID: ${{ secrets.aws_release_access_key_id }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.aws_release_secret_access_key }}
+      AWS_DEFAULT_REGION: ${{ secrets.aws_default_region }}
     outputs:
       NODE_VERSION: ${{ steps.fetch_artifacts_from_s3.outputs.NODE_VERSION }}
     steps:
@@ -85,10 +87,6 @@ jobs:
         uses: actions/checkout@d632683dd7b4114ad314bca15554477dd762a938 # v4.2.0
 
       - name: List available RPMs in S3 for debugging
-        env:
-          # You may need to provide credentials depending on bucket policy
-          AWS_ACCESS_KEY_ID: ${{ secrets.aws_release_access_key_id }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.aws_release_secret_access_key }}
         run: |
           S3_PATH="s3://releases-package-repos/polkadot/${{ env.VERSION }}"
           echo "Listing .rpm files in ${S3_PATH}..."
