--- a/.github/workflows/release-reusable-publish-packages.yml
+++ b/.github/workflows/release-reusable-publish-packages.yml
@@ -91,7 +91,7 @@ jobs:
         run: |
           S3_PATH="s3://releases-package-repos/polkadot/${{ env.VERSION }}"
           echo "Listing .rpm files in ${S3_PATH}..."
-          aws s3 ls "${S3_PATH}" --recursive | grep ".rpm" || echo "No RPM files found in ${S3_PATH}"
+          aws s3 ls "${S3_PATH}" --recursive || echo "No files found in ${S3_PATH}"
 
       - name: Fetch rc artifacts or release artifacts from s3 based on version
         id: fetch_artifacts_from_s3
