--- a/.github/workflows/release-reusable-publish-packages.yml
+++ b/.github/workflows/release-reusable-publish-packages.yml
@@ -260,7 +260,7 @@ jobs:
                 --user root:root \
                 --rm \
                 docker.io/paritytech/rpm \
-                /bin/bash -c 'cd /rpm && rpm --addsign polkadot_*.rpm'
+                /bin/bash -c "cd /rpm && rpm --addsign '${rpm_filename}'"
 
             # Cleanup
             rm -rf "${TEMP_DIR}"
