--- a/substrate/frame/revive/zombienet/Cargo.toml
+++ b/substrate/frame/revive/zombienet/Cargo.toml
@@ -14,6 +14,7 @@ workspace = true
 [dependencies]
 anyhow = { workspace = true }
 env_logger = { workspace = true }
+futures = { workspace = true }
 hex = { workspace = true }
 jsonrpsee = { workspace = true, features = ["full"] }
 log = { workspace = true }
