--- a/.github/workflows/tests-linux-stable-xp.yml
+++ b/.github/workflows/tests-linux-stable-xp.yml
@@ -16,6 +16,7 @@ jobs:
   isdraft:
     uses: ./.github/workflows/reusable-isdraft.yml
   preflight:
+    needs: isdraft
     uses: ./.github/workflows/reusable-preflight.yml
 
   # No filter for 'all_security_features_work' and 'nonexistent_cache_dir'
